--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -23,3 +23,6 @@
 @import "card_banner";
 @import "blog_banner";
 @import "card_blog";
+@import "service_categories";
+@import "adoption_section";
+@import "pet_alert";
