--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,205 +1,5 @@
 <div class="container-all">
-  <div class="banner row d-flex justify-content-around align-items-center text-center">
-    <div class="text-center col" >
-      <h1>Adopter avec amour,</h1>
-      <h1>Accompagner avec soin.</h1>
-      <div class="d-flex flex-row justify-content-center">
-        <%= link_to animals_path, class: "hoveredbutton btn btn-primary btn-spa text-dark p-3 mt-4 text-end shadow me-4", style:"border-radius: 32px;" do%>
-          Je veux adopter !
-        <%end%>
-        <%= link_to pricings_path, class: "hoveredbutton btn btn-primary btn-spa text-dark p-3 mt-4 text-end shadow", style:"border-radius: 32px;" do%>
-          J'offre mon service !
-        <%end%>
-      </div>
-    </div>
-    <div class="col">
-      <div class="d-flex flex-row">
-        <div class="card_banner">
-          <h2>🐶</h2>
-          <h4 class="my-4">Adoption responsable</h4>
-          <p>Aide les utilisateurs à adopter un animal avec amour et en toute responsabilité.</p>
-        </div>
-        <div class="card_banner mx-4">
-          <h2>🏥</h2>
-          <h4 class="my-4">Services pour animaux</h4>
-          <p>Facilite la prise de rendez-vous avec des professionnels locaux.</p>
-        </div>
-        <div class="card_banner">
-          <h2>📂</h2>
-          <h4 class="my-4">Carnet de santé numérique </h4>
-          <p>Permet aux propriétaires d’animaux d’accéder à tout moment aux informations médicales de leur compagnon.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <%# search zone %>
-  <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
-    <div class="d-flex justify-content-center search-form-control form-group mb-3", style="width: 100%;" >
-      <div class="d-flex align-items-center search-form-control form-group w-form">
-        <%= text_field_tag :query,
-              params[:query],
-              class: "form-control search-bar bg-secondary ps-5 w-75",
-              placeholder: "Rechercher un service..."
-          %>
-        <%= text_field_tag :query_address,
-              params[:query_address],
-              class: "form-control search-bar bg-secondary ps-5 w-25",
-              placeholder: "Ville..."
-          %>
-        <div>
-          <%= submit_tag "Rechercher", class: "btn_custom search-bar" %>
-        </div>
-      </div>
-    </div>
-  <% end %>
-  <%# Service categories %>
-  <h3 class="mt-5">Nos services</h3>
-  <div class="d-flex justify-content-start custom-scroll mt-2", style="white-space: nowrap; overflow-x: auto;">
-    <a href="<%=professionals_path%>"  style="text-decoration:none; color: white;">
-      <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%="#{ENV['SUPABASE_URL']}"%>/storage/v1/object/public/general_images/vitaly-gariev-HURf5iUtSQg-unsplash.jpg);">
-        <h4>Tous nos services</h4>
-      </div>
-    </a>
-    <% (0...@all_specialty.length).each do |i| %>
-      <% specialty = @all_specialty[i][:specialty]%>
-      <% photo = @all_specialty[i][:photo]%>
-      <% if @available_specialty.include?(specialty)%>
-        <a href="<%=professionals_path(specialty: specialty)%>" style="text-decoration:none; color: white;">
-          <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=photo%>);">
-            <h4><%=specialty%></h4>
-          </div>
-        </a>
-      <% else %>
-        <a href="#" style="text-decoration:none; color: white; pointer-events: none;">
-          <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=photo%>);">
-            <div class="d-inline text-center" >
-              <h4><%=specialty%></h4>
-              <p>Bientôt disponible</p>
-            </div>
-          </div>
-        </a>
-      <% end %>
-    <% end %>
-  </div>
-  <%# Add a service %>
-  <h3 class="mt-5 text-center">Vous aussi, vous souhaitez proposer un service ?</h3>
-  <div class="row d-flex justify-content-center align-items-center mt-4">
-    <div class="col-12 col-lg-5 text-center pe-5">
-      <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/guy-walking-with-dog-in-the-park.png",alt:"Proposer un service" )%>
-    </div>
-    <div class="col-12 col-lg-5" style="word-wrap: break-word; word-break: break-word; white-space: normal; text-align: justify;">
-      <h5>Vous adorez les animaux et vous avez des compétences à partager ?</h5>
-      <br>
-      <h5>Que vous soyez vétérinaire, comportementaliste, nutritionniste ou pet-sitter, Boop est fait pour vous ! </h5>
-      <br>
-      <h5>Rejoignez notre communauté et proposez vos services à des propriétaires d'animaux qui cherchent des solutions fiables et de confiance.</h5>
-      <h5>C’est simple, rapide, et vous pouvez faire une vraie différence dans la vie des animaux tout en développant votre activité. Inscrivez-vous maintenant et commencez à aider nos compagnons à quatre pattes !
-      </h5>
-      <div class="text-center mt-4 ">
-        <%= link_to "Proposer un service", pricings_path,
-              class: "hoveredbutton btn_custom"%>
-      </div>
-    </div>
-  </div>
-  <%# animals autoscroll %>
-  <div class="d-flex flex-column justify-content-center align-items-center py-4 px-5 w-100 my-5" style="background: linear-gradient(#EFA690, #fdfcfa)" >
-    <h3 class="mt-5 text-center">Ils attendent un foyer...</h3>
-    <h5 class="m-2 mb-5 text-center">Offrez-leur une seconde chance, adoptez un ami pour la vie.</h5>
-    <div class="d-flex flex-row card_animal_container" data-controller="autoscroll" data-autoscroll-target="autoscrollContainer">
-      <% @animals.each do |animal| %>
-        <a  href="<%=animal_path(animal)%>"
-              style="text-decoration: none; color: black; margin: 20px">
-          <div class="col">
-            <div  class="card_animal_home_page p-0 d-flex flex-column"
-                    style="overflow: hidden; margin: 0px !important;"
-                    data-animal-index-target="animal"
-                    data-action="mouseover->animal-index#hover mouseout->animal-index#unhover">
-              <!-- En-tête -->
-              <div class="p-3 text-center" style="border-radius: 8px 8px 0 0; background-color:white;">
-                <%=animal.name %>
-              </div>
-              <!-- Image qui prend le reste de la place -->
-              <div class="flex-grow-1" style="overflow: hidden;">
-                <%= image_tag animal.photo, style: "width: 100%; height: 100%; object-fit: cover;" %>
-              </div>
-            </div>
-          </div>
-        </a>
-      <% end %>
-    </div>
-  </div>
-  <%# pet alert %>
-  <div class="row d-flex justify-content-center align-items-center m-2">
-    <div class="card_pro p-4 col-lg-10 col-md-10 col-sm-10">
-      <div class="text-center">
-        <h3>Pet Alert !</h3>
-        <h5 class="m-2 mb-4">Un regard rapide peut sauver une vie : animaux perdus et retrouvés.</h5>
-      </div>
-      <div class="row d-flex align-items-center justify-content-around" >
-        <%# alert image %>
-        <div class="d-flex flex-column justify-content-center align-items-center col-lg-3 col-md-3 col-sm-7 p-3">
-          <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//Pet%20Alert.png", alt:"pet alert", class:"alert_image m-4")%>
-          <a href="<%=new_pet_alert_path%>" class="btn_custom"> Publier une annonce </a>
-        </div>
-        <%# carousel %>
-        <div class="col-lg-7 col-md-7 col-sm-10">
-          <% if @pet_alerts.empty?%>
-            <div class="bg-secondary p-4" style="border-radius: 12px; height: 300px; object-fit: contain;">
-              <p>Pas d'annonces en cours 🤗 </p>
-            </div>
-          <% else %>
-            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <% @pet_alerts.each_with_index do |a, index| %>
-                  <a href="<%=pet_alerts_path%>" style="text-decoration: none; color: white;">
-                    <div class="carousel-item <%= 'active' if index == 0 %>" data-bs-interval="5000">
-                      <div class="carousel-image-container">
-                        <% if a.photo.present?%>
-                          <%= image_tag(a.photo_url, alt: "photo of pet alert", class: "d-block w-100", style: "border-radius: 12px; height: 300px; object-fit: cover;") %>
-                        <% else %>
-                          <div class="bg-secondary p-4" style="border-radius: 12px; height: 300px; object-fit: contain;">
-                            <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/question%20(3).png", alt:"pet alert default", class: "d-block w-100", style: "border-radius: 12px; height: 300px; object-fit: contain;")%>
-                          </div>
-                        <% end %>
-                        <div class="carousel-caption d-none d-md-block card text-light" style="border-radius: 20px;background: rgba(73, 54, 87, 0.55);">
-                          <div class="d-flex flex-row justify-content-center align-items-center">
-                            <h5><strong><%=a.title%></strong></h5>
-                            <% if a.status == false %>
-                              <i class="fa-solid fa-circle-exclamation mx-4 " style="font-size: 32px; color: #FF0035;"></i>
-                            <% else %>
-                              <i class="fa-solid fa-circle-check text-success mx-4 " style="font-size: 32px"></i>
-                            <% end %>
-                          </div>
-                          <p class="m-2"><%=a.description.slice(0, 100)%>...</p>
-                          <a href="<%=pet_alert_path(a)%>" class="btn btn-info rounded rounded-4">En savoir plus</a>
-                        </div>
-                        <div class="carousel-caption-overlay"></div>
-                      </div>
-                    </div>
-                  </a>
-                <% end %>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          <% end %>
-        </div>
-      </div>
-      <div class="text-end">
-        <h5>
-          <a href="<%=pet_alerts_path%>" class="text-dark" style="text-decoration: underline">Voir toutes les annonces <i class="fa-solid fa-arrow-right"></i></a>
-        </h5>
-      </div>
-    </div>
-  </div>
-  <%# numbers %>
-  <div>
-
-  </div>
+  <%= render 'banner' %>
+  <%= render "adoption_section" %>
+  <%= render "pet_alert" %>
 </div>
