--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,45 +1,36 @@
 <div class="navbar navbar-expand-md navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "/", class: "navbar-brand mx-4" do %>
-      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//Boop%20-%20LOGO%20FINAL%20RVB.png" %>
+    <%= link_to "/", class: "navbar-brand" do %>
+      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//Boop%20-%20LOGO%20FINAL%20RVB.png", alt: "Boop Logo" %>
     <% end %>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse text-end" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto d-flex align-items-center">
-        <li class="nav-item active">
-          <h5>
-            <%= link_to "Accueil", root_path, class: "nav-link"%>
-          </h5>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto d-flex align-items-center gap-4">
+        <li class="nav-item">
+          <%= link_to "Accueil", root_path, class: "nav-link"%>
         </li>
-        <li class="nav-item active">
-          <h5>
-            <%= link_to "Prendre un rendez-vous", professionals_path, class: "nav-link mx-3"%>
-          </h5>
+        <li class="nav-item">
+          <%= link_to "Prendre un rendez-vous", professionals_path, class: "nav-link"%>
         </li>
-        <li class="nav-item active">
-          <h5>
-            <%= link_to "Proposer un service", pricings_path, class: "nav-link" %>
-          </h5>
+        <li class="nav-item">
+          <%= link_to "Proposer un service", pricings_path, class: "nav-link" %>
         </li>
-        <li class="nav-item active">
-          <h5>
-            <%= link_to "Adopter", animals_path, class: "nav-link mx-3" %>
-          </h5>
+        <li class="nav-item">
+          <%= link_to "Adopter", animals_path, class: "nav-link" %>
         </li>
-        <li class="nav-item active">
-          <h5>
-            <%= link_to "Pet Alert", pet_alerts_path, class: "nav-link" %>
-          </h5>
+        <li class="nav-item">
+          <%= link_to "Pet Alert", pet_alerts_path, class: "nav-link" %>
         </li>
-        <li class="nav-item active">
-          <h5>
-            <%= link_to "Blog", blogs_path, class: "nav-link mx-3" %>
-          </h5>
+        <li class="nav-item">
+          <%= link_to "Blog", blogs_path, class: "nav-link" %>
         </li>
+
         <% if user_signed_in? %>
-          <li class="nav-item dropdown d-flex align-items-end flex-column">
+          <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <% if current_user.photo.key?%>
                 <%= image_tag "#{ENV['SUPABASE_URL']}/storage/v1/object/public/uploaded_photos/#{current_user.photo.key}", class: "avatar", alt: "dropdown menu", style: "object-fit: cover"%>
@@ -47,7 +38,7 @@
                 <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/profil-default.jpg", class: "avatar", alt: "dropdown menu", style: "object-fit: cover"%>
               <% end %>
             </a>
-            <div class="dropdown-menu dropdown-menu-end" style="width: fit-content;" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <% if !current_user.orders.empty? %>
                 <%= link_to "Mon organisme", pro_index_user_path(current_user), class: "dropdown-item" %>
               <%end%>
@@ -57,7 +48,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Se connecter", new_user_session_path, class: "btn btn-primary rounded rounded-4 text-dark" %>
+            <%= link_to "Se connecter", new_user_session_path, class: "btn btn-primary rounded-pill" %>
           </li>
         <% end %>
       </ul>
