--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-light text-center text-lg-start" style="sticky-bottom: 0;">
+<footer class="text-center text-lg-start" style="sticky-bottom: 0;">
   <div class="container p-2">
     <div class="row d-flex justify-content-between">
       <div class="col-lg-8 col-md-7 col-sm-7 text-start">
