--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -26,3 +26,6 @@
 @import "service_categories";
 @import "adoption_section";
 @import "pet_alert";
+@import "pet_card";
+@import "animals_banner";
+@import "animal_show";
