--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,72 +1,33 @@
-<%# back %>
-<div>
-  <%= link_to root_path, class:"text-decoration-none text-primary", style:"font-size: 16px" do%>
-    <i class="fa-solid fa-chevron-left text-primary ms-4 me-3 mt-3"></i>Retour
-  <% end %>
-</div>
+<%= render "banner" %>
+
 <div class="container">
-  <%# carousel %>
-  <div id="carouselExampleSlidesOnly" class="carousel slide rounded-5" data-bs-ride="carousel" style="width: 100%; max-height: 71vh; overflow: hidden;">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/roberto-nickson-q9nZUFC1nTw-unsplash.jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(5).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(6).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(4).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(3).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(2).jpg", class:"d-block w-100", alt:"Photo d'animaux heureux", style:"transition: 3s ease" )%>
-      </div>
-    </div>
-  </div>
-  <%# title %>
-  <h1 class="text-center my-4">Ils cherchent une nouvelle famille</h1>
+
   <%# search bar %>
-  <div class="row justify-content-center">
-    <div class="col-sm-8 my-3">
-      <%= form_with url: animals_path, method: :get, class: "d-flex" do %>
-        <%= text_field_tag :query,
-            params[:query],
-            class: "form-control",
-            placeholder: "Rechercher par ville"
-        %>
-        <%= submit_tag "Recherche", name: "", class: "btn btn-primary" %>
-      <% end %>
-    </div>
+  <h4 class="text-center my-4">Trouvez votre compagnon proche de chez vous</h4>
+  <div id="search-section">
+    <%= simple_form_for :search, url: animals_path, method: :get do |f| %>
+      <div class="search-form-control form-group mb-3">
+        <div class="search-inputs-container w-form">
+          <%= text_field_tag :query,
+              params[:query],
+              class: "form-control search-bar bg-white ps-5",
+              placeholder: "Rechercher par ville..."
+          %>
+          <%= submit_tag "Rechercher", class: "btn_custom search-bar ms-4" %>
+        </div>
+      </div>
+    <% end %>
   </div>
+
   <%# all animals %>
   <div class="d-flex flex-wrap justify-content-center" data-controller="animal-index">
     <% @animals.each do |animal| %>
-      <a  href="<%=animal_path(animal)%>"
-          style="text-decoration: none; color: black; margin: 20px">
-        <div class="col">
-          <div  class="m-2 card_pro p-0 d-flex flex-column"
-                style="width: 300px; aspect-ratio: 1/1; overflow: hidden;"
-                data-animal-index-target="animal"
-                data-action="mouseover->animal-index#hover mouseout->animal-index#unhover">
-            <!-- En-tête -->
-            <div class="p-3 text-center text-white" style="border-radius: 8px 8px 0 0; background-color: #55868C;">
-              <%=animal.name %>
-            </div>
-            <!-- Image qui prend le reste de la place -->
-            <div class="flex-grow-1" style="overflow: hidden;">
-              <%= image_tag animal.photo, style: "width: 100%; height: 100%; object-fit: cover;" %>
-            </div>
-          </div>
+      <%= link_to animal_path(animal), class: "pet_card", data: { animal_index_target: "animal", action: "mouseover->animal-index#hover mouseout->animal-index#unhover" } do %>
+        <div class="pet_image">
+          <%= image_tag animal.photo%>
         </div>
-      </a>
+        <h3 class="pet_name"><%= animal.name %></h3>
+      <% end %>
     <% end %>
   </div>
 </div>
