--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,11 +1,10 @@
 <div class="banner-container">
-    <%= render 'shared/navbar' %>
   <div class="banner-content">
     <div class="hero-section">
       <div class="hero-content">
         <h1 class="hero-title">
-          <span class="orange">ACCOMPAGNER</span> AVEC SOIN<br>
-           <span class="orange">ADOPTER</span> AVEC AMOUR
+          <span class="text-warning">ACCOMPAGNER</span> AVEC SOIN<br>
+           <span class="text-warning">ADOPTER</span> AVEC AMOUR
         </h1>
 
         <p class="hero-subtitle">
@@ -23,26 +22,4 @@
       </div>
     </div>
   </div>
-  <%# search zone %>
-  <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
-    <div class="d-flex justify-content-center search-form-control form-group mb-3" style="width: 100%; margin-top: 2rem;" >
-      <div class="d-flex align-items-center search-form-control form-group w-form">
-        <%= text_field_tag :query,
-              params[:query],
-              class: "form-control search-bar bg-white ps-5 w-75",
-              placeholder: "Rechercher un service..."
-          %>
-        <%= text_field_tag :query_address,
-              params[:query_address],
-              class: "form-control search-bar bg-white ps-5 w-25",
-              placeholder: "Ville..."
-          %>
-        <div>
-          <%= submit_tag "Rechercher", class: "btn_custom search-bar mx-5" %>
-        </div>
-      </div>
-    </div>
-  <% end %>
-
-  <%= render "service_categories" %>
 </div>
