--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,30 @@
 // Add padding to body to account for fixed navbar
 body {
+  padding-top: 0; // Remove padding from body
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.page-wrapper {
+  flex: 1 0 auto;
   padding-top: 76px; // Height of the navbar
+  width: 100%;
+}
+
+.content-wrap {
+  width: 100%;
+}
+
+.footer {
+  flex-shrink: 0;
 }
 
 .navbar-lewagon {
+  height: 76px; // Explicitly set height
   justify-content: space-between;
   background-color: #FFF5F1;
   position: fixed;
