--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -6,9 +6,8 @@
 </div>
 
 <div class="pet-profile-container">
-  <div class="speech-bubble">
-    <p class="text-white">Salut, je suis <%= @animal.name %>!</p>
-  </div>
+
+
 
   <div class="profile-content">
     <div class="pet-image">
@@ -16,6 +15,7 @@
     </div>
 
     <div class="pet-details">
+    <h2 class="text-warning mb-5">Salut, je m'appelle <%= @animal.name %>!</h2>
 
 
 <div class="row">
