--- a/app/views/pages/_pet_alert.html.erb
+++ b/app/views/pages/_pet_alert.html.erb
@@ -54,7 +54,7 @@
             </div>
           <% end %>
           <div class="text-end mt-3">
-            <%= link_to pet_alerts_path, class: "view-all-link " do %>
+            <%= link_to pet_alerts_path, class: "view-all-link mt-5" do %>
               Voir toutes les annonces <i class="fa-solid fa-arrow-right"></i>
             <% end %>
           </div>
