--- a/app/assets/stylesheets/components/_animals_banner.scss
+++ b/app/assets/stylesheets/components/_animals_banner.scss
@@ -7,19 +7,9 @@ html {
   padding: 4rem 0;
   position: relative;
   overflow: hidden;
+  height: 100vh;
 
-  &::before {
-    content: '';
-    position: absolute;
-    right: -10%;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 400px;
-    height: 400px;
-    background-color: #FFE4D6;
-    border-radius: 50%;
-    z-index: 1;
-  }
+
 
   .hero-content {
     display: grid;
@@ -38,7 +28,7 @@ html {
 
   .hero-text {
     .subtitle {
-      color: #4A90A0;
+      color: $warning;
       font-size: 1.1rem;
       font-weight: 500;
       margin-bottom: 1rem;
@@ -99,7 +89,7 @@ html {
       left: -10px;
       right: -10px;
       bottom: -10px;
-      border: 2px solid #4A90A0;
+      border: 2px solid $warning;
       border-radius: 40% 60% 65% 35% / 40% 45% 55% 60%;
       z-index: 1;
     }
