--- a/app/assets/stylesheets/components/_pet_alert.scss
+++ b/app/assets/stylesheets/components/_pet_alert.scss
@@ -2,6 +2,7 @@
   margin: 2rem;
   padding: 2rem 0;
   position: relative;
+  max-width: 1500px;
 
   @media (max-width: 768px) {
     margin: 1rem;
